--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: cristal-auto-pusher
     env: python
     plan: free
-    buildCommand: pip install requests
+    buildCommand: pip install -r requirements.txt
     startCommand: python app.py
     envVars:
       - key: RELAY_URL
